fixed css and alignment

--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@
     flex-direction: column;
 }
 
+.header-center {
+    text-align: center;
+    color: #e2001a;
+}
+
 
 /* Colors
 Americana:
